// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HorizontalStroke /> by default matches with snapshot 1`] = `
.c0 {
  display: block;
  border: none;
  background: #222;
  width: 1.875rem;
  height: 0.25rem;
}

<span
  className="c0"
  height={null}
  size="default"
  width={null}
/>
`;

exports[`<HorizontalStroke /> with \`big\` size matches with snapshot 1`] = `
.c0 {
  display: block;
  border: none;
  background: #222;
  width: 3.125rem;
  height: 0.25rem;
}

<span
  className="c0"
  height={null}
  size="big"
  width={null}
/>
`;

exports[`<HorizontalStroke /> with \`huge\` size matches with snapshot 1`] = `
.c0 {
  display: block;
  border: none;
  background: #222;
  width: 6.25rem;
  height: 0.375rem;
}

<span
  className="c0"
  height={null}
  size="huge"
  width={null}
/>
`;

exports[`<HorizontalStroke /> with \`tiny\` size matches with snapshot 1`] = `
.c0 {
  display: block;
  border: none;
  background: #222;
  width: 1.25rem;
  height: 0.125rem;
}

<span
  className="c0"
  height={null}
  size="tiny"
  width={null}
/>
`;

exports[`<HorizontalStroke /> with with and height props matches with snapshot 1`] = `
.c0 {
  display: block;
  border: none;
  background: #222;
  width: 1.875rem;
  height: 0.25rem;
  width: 6.25rem;
  height: 3.125rem;
}

<span
  className="c0"
  height={50}
  size="default"
  width={100}
/>
`;
